--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "h5p-textordering",
   "version": "1.0.0",
-  "main": "h5p-textordering.js",
+  "description": "A question-type that requires the vertical or horizontal sequencing of text.",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pau1tuck/h5p-textordering"
+  },
+  "keywords": ["h5p", "library"],
   "author": "Paul Tuck @pau1tuck",
   "license": "MIT",
+  "main": "dist/h5p-textordering.js",
+  "scripts": {
+    "dev": "webpack NODE_ENV='development' webpack --mode=development --watch",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cross-env NODE_ENV='production' webpack --mode=production && cp library.json ./package/H5P.TextOrdering/ && cp semantics.json ./package/H5P.TextOrdering/ && cp ./dist/* ./package/H5P.TextOrdering/dist/ && rm ./package/TextOrdering.h5p && cd package && zip -r -D -X TextOrdering.h5p *"
+  },
   "dependencies": {
     "-": "^0.0.1",
-    "@types/webpack-dev-server": "^4.7.2",
     "D": "^1.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack": "^5.70.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.5",
@@ -23,6 +33,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/webpack": "^5.28.0",
+    "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel-loader": "^8.2.3",
@@ -39,7 +50,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2",
-    "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
