--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "type": "git",
     "url": "git+https://github.com/pau1tuck/h5p-textordering"
   },
-  "keywords": ["h5p", "library"],
+  "keywords": [
+    "h5p",
+    "library"
+  ],
   "author": "Paul Tuck @pau1tuck",
   "license": "MIT",
   "main": "dist/h5p-textordering.js",
@@ -30,6 +33,7 @@
     "@babel/preset-typescript": "^7.16.7",
     "@babel/runtime": "^7.17.2",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
+    "@types/jquery": "^1.10.27",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
     "@types/webpack": "^5.28.0",
@@ -48,6 +52,8 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "prettier": "^2.5.1",
+    "prettier-eslint": "^13.0.0",
     "ts-node": "^10.6.0",
     "typescript": "^4.6.2",
     "webpack-cli": "^4.9.2",
