--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,12 @@
     "json.schemas": [
         {
             "fileMatch": [
+                "/semantics.json"
+            ],
+            "url": "https://raw.githubusercontent.com/sr258/h5p-types/main/schemas/semantics-schema.json"
+        },
+        {
+            "fileMatch": [
                 "/library.json"
             ],
             "url": "https://raw.githubusercontent.com/sr258/h5p-types/main/schemas/library-schema.json"
