--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "isolatedModules": true,
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
+        "noImplicitAny": false,
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "strict": true,
