--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "type": "git",
     "url": "git+https://github.com/pau1tuck/h5p-textordering"
   },
-  "keywords": ["h5p", "library"],
+  "keywords": [
+    "h5p",
+    "library"
+  ],
   "author": "Paul Tuck @pau1tuck",
   "license": "MIT",
   "main": "dist/h5p-textordering.js",
@@ -37,6 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "babel-loader": "^8.2.3",
+    "babel-minify-webpack-plugin": "^0.3.1",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-config-airbnb-typescript-prettier": "^5.0.0",
@@ -48,6 +52,8 @@
     "eslint-plugin-react": "^7.29.3",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "prettier": "^2.5.1",
     "prettier-eslint": "^13.0.0",
     "ts-node": "^10.6.0",
